--- a/smallLin.css
+++ b/smallLin.css
@@ -98,7 +98,8 @@
     font-size: 15px;
     background-color: rgb(255, 234, 234);
     top: 75px;
-    left: 280px;
+    /* left: 280px; */
+    left: 350px;
     text-align: center;
     display: block;
     /* transform: translateY(60%); */
