--- a/smallLin.css
+++ b/smallLin.css
@@ -89,8 +89,6 @@
     font-family: 'Gill Sans';
 }
 
-.subMenu {}
-
 .dropDown {
     position: absolute;
     margin: auto;
@@ -98,8 +96,7 @@
     font-size: 15px;
     background-color: rgb(255, 234, 234);
     top: 75px;
-    /* left: 280px; */
-    left: 335px;
+    left: 280px;
     text-align: center;
     display: block;
     /* transform: translateY(60%); */
@@ -237,6 +234,38 @@
     width: 60px;
     flex-direction: column;
     justify-content: center;
+}
+
+.dropDown__full {
+    position: absolute;
+    z-index: -1;
+    top: 80px;
+    left: 0px;
+    height: 250px;
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(230, 227, 227);
+}
+
+.list {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 110px;
+}
+
+.item {
+    display: inline-flex;
+    font-size: 24px;
+    letter-spacing: 8px;
+}
+
+.adImg {
+    width: 240px;
+    height: 90px;
 }
 
 
