--- a/footer.css
+++ b/footer.css
@@ -1,28 +1,98 @@
-.footer {
-    border: 1px solid #000;
-    width: 100%;
-    height: 200px;
-    position: fixed;
-    top: 380px;
-    left: 0;
-    background-color: rgb(206, 206, 206);
-}
-
-.socialIcon {
-    width: 50px;
-    border-radius: 30px;
-}
-
-.containner {
-    padding-top: 12px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    width: 200px;
-}
-
-.containner__text {
-    padding-top: 12px;
-    text-align: center;
-    font-size: 16px;
-}
+        .footer {
+            border: 1px solid #000;
+            width: 100%;
+            height: 200px;
+            position: relative;
+            bottom: 0;
+            left: 0;
+            background-color: rgb(206, 206, 206);
+        }
+        
+        .socialIcon {
+            width: 50px;
+            border-radius: 30px;
+        }
+        
+        .containner {
+            padding-top: 12px;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            width: 200px;
+        }
+        
+        .containner__text {
+            padding-top: 12px;
+            text-align: center;
+            font-size: 16px;
+        }
+        
+        .shopIcon {
+            font-size: 100px;
+            margin: auto;
+        }
+        
+        .express {
+            width: 400px;
+            position: relative;
+            top: 300px;
+            height: 300px;
+            display: inline-flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+        }
+        
+        .ecommerce__sub {
+            width: 150px;
+            text-align: center;
+            font-size: 14px;
+            margin-top: 10px;
+            letter-spacing: 5px;
+        }
+        
+        .strong {
+            font-size: 25px;
+            font-weight: bolder;
+        }
+        
+        .containner__express {
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            max-width: 900px;
+        }
+        
+        .hover_bigger {
+            font-size: 150px;
+        }
+        
+        .express__hint {
+            position: relative;
+            top: 300px;
+            left: 45%;
+            width: 100px;
+            display: inline-flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+        }
+        
+        .express__hint>i {
+            color: darkorchid;
+            font-size: 80px;
+            text-align: center;
+        }
+        
+        .express__hint>span {
+            font-size: 16px;
+            text-align: center;
+        }
+        
+        @media(max-width:768px) {
+            .footer {
+                display: none;
+            }
+        }
