--- a/smallLin.css
+++ b/smallLin.css
@@ -113,7 +113,7 @@
     font-size: 15px;
     background-color: rgb(255, 234, 234);
     top: 75px;
-    left: 47%;
+    left: 38.5em;
     text-align: center;
     display: block;
     /* transform: translateY(60%); */
