--- a/smallLin.css
+++ b/smallLin.css
@@ -47,7 +47,7 @@
 }
 
 .header__logo:hover {
-    opacity: 0.6;
+    opacity: 0.8;
     /* position: fixed; */
     cursor: pointer;
 }
@@ -95,6 +95,7 @@
 
 .dropDown__class {
     position: absolute;
+    z-index: 1;
     margin: auto;
     width: 120px;
     font-size: 15px;
@@ -103,11 +104,13 @@
     left: 22.5%;
     text-align: center;
     display: block;
+    opacity: 0.8;
     /* transform: translateY(60%); */
 }
 
 .dropDown__service {
     position: absolute;
+    z-index: 1;
     margin: auto;
     width: 120px;
     font-size: 15px;
@@ -116,11 +119,12 @@
     left: 38.5em;
     text-align: center;
     display: block;
+    opacity: 0.8;
     /* transform: translateY(60%); */
 }
 
 .dropDown__menu {
-    opacity: 0.6;
+    opacity: 0.8;
     text-decoration: none;
     line-height: 45px;
 }
@@ -139,7 +143,7 @@
 
 
 /* .nav__link:hover {
-    opacity: 0.6;
+    opacity: 0.8;
     flex: 1;
     text-align: center;
     font-size: 13px;
@@ -203,7 +207,7 @@
     /* justify-content: center; */
     align-items: center;
     cursor: pointer;
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 .tool__search__ch {
@@ -255,8 +259,8 @@
 
 .dropDown__full {
     position: absolute;
-    z-index: -1;
-    top: 80px;
+    z-index: 1;
+    top: 75px;
     left: 0px;
     height: 250px;
     width: 100%;
@@ -264,6 +268,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgb(230, 227, 227);
+    opacity: 0.9;
 }
 
 .list {
@@ -278,6 +283,8 @@
 
 .item {
     display: inline-flex;
+    text-decoration: none;
+    color: black;
     font-size: 24px;
     letter-spacing: 8px;
 }
@@ -292,20 +299,20 @@
     cursor: pointer;
     text-align: center;
     flex: 1;
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 .tool__member:hover {
     text-align: center;
     flex: 1;
-    opacity: 0.6;
+    opacity: 0.8;
     cursor: pointer;
 }
 
 .tool__kart:hover {
     text-align: center;
     flex: 1;
-    opacity: 0.6;
+    opacity: 0.8;
     cursor: pointer;
 } */
 
@@ -362,7 +369,7 @@
         height: 70px;
     }
     .tool__kart:hover {
-        opacity: 0.6;
+        opacity: 0.8;
         height: 70px;
     }
     .tool {
